# docs/swagger.json
@@ -162,11 +162,11 @@
                 "parameters": [
                     {
                         "description": "Данные пользователя",
-                        "name": "user",
+                        "name": "passporNumber",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateUser"
+                            "$ref": "#/definitions/handler.request"
                         }
                     }
                 ],
@@ -334,29 +334,6 @@
                 }
             }
         },
-        "handler.CreateUser": {
-            "type": "object",
-            "properties": {
-                "address": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "passportNumber": {
-                    "type": "string"
-                },
-                "passportSerie": {
-                    "type": "string"
-                },
-                "patronymic": {
-                    "type": "string"
-                },
-                "surname": {
-                    "type": "string"
-                }
-            }
-        },
         "handler.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -364,6 +341,14 @@
                     "type": "string"
                 },
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.request": {
+            "type": "object",
+            "properties": {
+                "passportNumber": {
                     "type": "string"
                 }
             }
